<resources>
    <string name="app_name">Checkbox</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Do you have these pets?</string>
    <string name="dog_title">Dog</string>
    <string name="cat_title">Cat</string>
    <string name="drag_title">Dragon</string>
    <string name="button_title">Show</string>
    <string name="text_show">show</string>
</resources>
