<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="#b270c2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="20dp"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dog_title"
        android:id="@+id/dog"
        android:checked="false"
        android:layout_below="@+id/dragon"
        android:layout_alignLeft="@+id/dragon"
        android:layout_alignStart="@+id/dragon"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat_title"
        android:id="@+id/cat"
        android:checked="false"
        android:layout_below="@+id/dog"
        android:layout_alignLeft="@+id/dog"
        android:layout_alignStart="@+id/dog"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drag_title"
        android:id="@+id/dragon"
        android:checked="false"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/showButtonId"
        android:layout_alignStart="@+id/showButtonId"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_title"
        android:id="@+id/showButtonId"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_show"
        android:id="@+id/show_textview_id"
        android:layout_below="@+id/showButtonId"
        android:layout_alignRight="@+id/dog"
        android:layout_alignEnd="@+id/dog"
        android:layout_marginTop="37dp"
        />
</RelativeLayout>
